--- a/force-app/main/default/lwc/personInformation/personInformation.html
+++ b/force-app/main/default/lwc/personInformation/personInformation.html
@@ -21,7 +21,7 @@
             </lightning-card>
             <lightning-card>
                 <div class="slds-col">
-                    <lightning-input type="date" name="dateTo" label="To" ></lightning-input>
+                    <lightning-input type="date" name="dateTo" label="To" onchange={changeDateTo} ></lightning-input>
                 </div>
             </lightning-card>
             <lightning-card>
