--- a/force-app/main/default/lwc/formsFromPropertyes/formsFromPropertyes.html
+++ b/force-app/main/default/lwc/formsFromPropertyes/formsFromPropertyes.html
@@ -1,14 +1,18 @@
 <!-- sldsValidatorIgnore -->
 <template>
     <lightning-card title="Enter data for Propertyes:">
-
-        <template for:each={elements} for:item="element">
-            <lightning-record-edit-form class="slds-p-around_small" key={element.id} object-api-name="Property__c">
+11
+        <template for:each={elements} for:item="element" for:index="index">
+            <lightning-record-edit-form class="slds-p-around_small" 
+                                        key={element.id} 
+                                        object-api-name="Property__c"
+                                        field-names=""
+                                        record-type-id={recordTypeId}>
                 <lightning-input-field field-name="Address__c"></lightning-input-field>
                 <lightning-input-field field-name="Selling_price__c"></lightning-input-field>
                 <lightning-input-field field-name="Rent_price__c"></lightning-input-field>
-                <lightning-input-field disabled="true" field-name="RecordTypeId" value={recordTypeId}></lightning-input-field>
-                <lightning-input-field disabled="true" field-name="Contact__c" value={recordId}></lightning-input-field>
+                
+                <!-- <lightning-input-field disabled="true" field-name="Contact__c" value={recordId}></lightning-input-field> -->
                 <lightning-button-icon icon-name="utility:new"
                                         variant="border-filled"
                                         onclick={addRow}
