--- a/force-app/main/default/lwc/propertyItem/propertyItem.html
+++ b/force-app/main/default/lwc/propertyItem/propertyItem.html
@@ -1,7 +1,7 @@
 <template>
 
-        <lightning-layout-item padding="around-small" size="8" small-device-size="8" medium-device-size="8">
-            <div class="custom-box slds-box slds-p-around_medium slds-text-align_center">
+        <lightning-layout-item padding="around-small" size="4" small-device-size="4" medium-device-size="4">
+            <div class="custom-box slds-box slds-p-around_medium slds-text-align_center" onclick={handleClick}>
             <img class="fit"
                 src={propertyImage}
                 alt={propertyName}>
