fixed HomeWork FE 3 4 6

--- a/force-app/main/default/lwc/propertyItem/propertyItem.html
+++ b/force-app/main/default/lwc/propertyItem/propertyItem.html
@@ -3,6 +3,9 @@
         <c-error-handler error={error}></c-error-handler>
     </template>
     <template if:true={propertyId}>
+        <template if:true={isLoading}>
+            <c-spinner></c-spinner>
+        </template>
         <lightning-layout-item padding="around-small" size="4" small-device-size="4" medium-device-size="4">
             <div class="custom-box slds-box slds-p-around_medium slds-text-align_center" onclick={handleClick}>
             <img class="fit"
