--- a/force-app/main/default/lwc/formsFromPropertyesV2/formsFromPropertyesV2.html
+++ b/force-app/main/default/lwc/formsFromPropertyesV2/formsFromPropertyesV2.html
@@ -18,13 +18,12 @@
                 <lightning-record-edit-form class="slds-p-around_small" 
                                             key={element.id} 
                                             object-api-name="Property__c"
-                                            field-names=""
                                             record-type-id={recordTypeId}>
                     <lightning-input-field field-name="Address__c"></lightning-input-field>
                     <lightning-input-field field-name="Selling_price__c"></lightning-input-field>
                     <lightning-input-field field-name="Rent_price__c"></lightning-input-field>
-                    
-                    <!-- <lightning-input-field disabled="true" field-name="Contact__c" value={recordId}></lightning-input-field> -->
+                    <lightning-input-field field-name="Contact__c" value={recordId} class="slds-hide"></lightning-input-field>
+                
                     <lightning-button-icon icon-name="utility:new"
                                             variant="border-filled"
                                             onclick={addRow}
