--- a/force-app/main/default/lwc/propertyCreationV2/propertyCreationV2.html
+++ b/force-app/main/default/lwc/propertyCreationV2/propertyCreationV2.html
@@ -1,5 +1,5 @@
 <template>
     <lightning-card title="Property Creation V2" icon-name="standard:household">
-        <c-forms-from-propertyes-v2 object-name-to-get-record-types={objectName} onrecordtypes={getRecordTypes}></c-forms-from-propertyes-v2>
+        <c-forms-from-propertyes-v2 record-id={recordId} object-name-to-get-record-types={objectName} onrecordtypes={getRecordTypes}></c-forms-from-propertyes-v2>
     </lightning-card>
 </template>
