--- a/force-app/main/default/lwc/propertyDetails/propertyDetails.html
+++ b/force-app/main/default/lwc/propertyDetails/propertyDetails.html
@@ -1,12 +1,13 @@
 <template>
-    <template if:true={isLoading}>
-        <c-spinner></c-spinner>
-    </template>
+   
     <template if:true={error}>
         <c-error-handler error={error} onerrorclosed={handleError}></c-error-handler>
     </template>
     <template if:true={recordId}>
-            <lightning-card>
+        <template if:true={isLoading}>
+            <c-spinner></c-spinner>
+        </template>
+            <lightning-card onload={handleLoad}>
                 <div class="custom-box slds-box slds-p-around_medium slds-text-align_center">
                     <div class="slds-text-align_center ">
                         {name}
@@ -30,8 +31,6 @@
                             Address: {address}
                         </div>
                 </div>
-                333
-                <lightning-button variant="brand" label="Test ERROR" title="Click me" onclick={doError} class="slds-m-left_x-small"></lightning-button>
             </lightning-card>
     </template>
 </template>
